@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix Instance.t on haiku-os
+
 1.302158  2019-01-08 15:36:24-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix TAP test on windows
